include_directories( ${CMAKE_SOURCE_DIR}/include )
include_directories( ${CMAKE_SOURCE_DIR}/deps/benchmark/include )
set ( unpack_benchmark_source unpack_benchmark.cc )
set ( unpack_chrono_benchmark_sources unpack_chrono_benchmark.cc )
set ( unpack_google_benchmark_sources unpack_google_benchmark.cc )
set ( unpack_alt_benchmark_sources unpack_alt_benchmark.cc )
add_executable( unpack_benchmark ${unpack_benchmark_source} )
add_executable( unpack_chrono_benchmark ${unpack_chrono_benchmark_sources} )
add_executable( unpack_google_benchmark ${unpack_google_benchmark_sources} )
if ( MAKE_ALT )
  add_executable( unpack_alt_benchmark ${unpack_alt_benchmark_sources} )
endif()
target_link_libraries( unpack_google_benchmark benchmark )
